--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <div class="usa-navbar">
           <div class="usa-logo" id="basic-logo">
             <a href="/" title="Home" aria-label="Home">
-              <img src="/assets/img/login-gov-logo.svg" class="usa-logo__img" alt="login.gov">
+              <img src="{{site.baseurl}}/assets/img/login-gov-logo.svg" class="usa-logo__img" alt="login.gov">
               <em class="usa-logo__text">Handbook</em>
             </a>
           </div>
@@ -63,7 +63,7 @@
         <div class="grid-container">
           <div class="usa-footer__logo grid-row grid-gap-2">
             <div class="grid-col-auto">
-              <img src="/assets/img/gsa-logo-rev.svg" alt="U.S. General Services Administration logo" class="usa-footer__logo-img usa-footer__slim usa-footer__medium">
+              <img src="{{site.baseurl}}/assets/img/gsa-logo-rev.svg" alt="U.S. General Services Administration logo" class="usa-footer__logo-img usa-footer__slim usa-footer__medium">
             </div>
             <div class="grid-col-auto">
               <h3 class="usa-footer__logo-heading">U.S. General Services Administration</h3>
