Move all private link configs to PrivateEye JS config

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -102,17 +102,21 @@
             'ea.gsa.gov',
             'email.gsa.gov',
             'gcims.gsa.gov',
+            'github.com/18f/identity-devops',
+            'github.com/18f/identity-devops-private',
+            'github.com/18f/identity-handbook-private',
+            'github.com/18f/identity-idp-config',
             'gkey.gsa.gov',
             'gsa-tts.slack.com',
             'gsa.my.salesforce.com',
             'gsaolu.gsa.gov',
             'hrprod.hr.gsa.gov',
             'insite.gsa.gov',
+            'login-handbook.app.cloud.gov',
             'mail.gsa.gov',
             'meet.gsa.gov',
             'pages-internal.18f.gov',
-            'tock.18f.gov',
-            'login-handbook.app.cloud.gov'
+            'tock.18f.gov'
           ]
         });
       }, false );
