Mark a few more domains as private

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,6 +96,7 @@
             'anywhere.gsa.gov',
             'bookit.gsa.gov',
             'calendar.gsa.gov',
+            'cm-jira.usa.gov',
             'connect.gsa.gov',
             'docs.google.com',
             'drive.google.com',
@@ -112,10 +113,12 @@
             'gsaolu.gsa.gov',
             'hrprod.hr.gsa.gov',
             'insite.gsa.gov',
+            'login-gov.app.opsgenie.com',
             'login-handbook.app.cloud.gov',
             'mail.gsa.gov',
             'meet.gsa.gov',
             'pages-internal.18f.gov',
+            'rpm.newrelic.com',
             'tock.18f.gov'
           ]
         });
