--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
       login.gov handbook
     </title>
     <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/assets/css/main.css">
+    <link rel="icon" type="image/x-icon" href="{{site.baseurl}}/favicon.ico" />
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
