Explicitly close self-closing tags

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,11 +7,11 @@
       {% endif %}
       login.gov handbook
     </title>
-    <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/assets/css/main.css" />
     <link rel="icon" type="image/x-icon" href="{{site.baseurl}}/favicon.ico" />
-    <meta name="HandheldFriendly" content="True">
-    <meta name="MobileOptimized" content="320">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="HandheldFriendly" content="True" />
+    <meta name="MobileOptimized" content="320" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <header class="usa-header usa-header--basic" role="banner">
@@ -19,7 +19,7 @@
         <div class="usa-navbar">
           <div class="usa-logo" id="basic-logo">
             <a href="/" title="Home" aria-label="Home">
-              <img src="{{site.baseurl}}/assets/img/login-gov-logo.svg" class="usa-logo__img" alt="login.gov">
+              <img src="{{site.baseurl}}/assets/img/login-gov-logo.svg" class="usa-logo__img" alt="login.gov" />
               <em class="usa-logo__text">Handbook</em>
             </a>
           </div>
@@ -64,7 +64,7 @@
         <div class="grid-container">
           <div class="usa-footer__logo grid-row grid-gap-2">
             <div class="grid-col-auto">
-              <img src="{{site.baseurl}}/assets/img/gsa-logo-rev.svg" alt="U.S. General Services Administration logo" class="usa-footer__logo-img usa-footer__slim usa-footer__medium">
+              <img src="{{site.baseurl}}/assets/img/gsa-logo-rev.svg" alt="U.S. General Services Administration logo" class="usa-footer__logo-img usa-footer__slim usa-footer__medium" />
             </div>
             <div class="grid-col-auto">
               <h3 class="usa-footer__logo-heading">U.S. General Services Administration</h3>
