--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -121,7 +121,8 @@
             'meet.gsa.gov',
             'pages-internal.18f.gov',
             'rpm.newrelic.com',
-            'tock.18f.gov'
+            'tock.18f.gov',
+            'figma.com'
           ]
         });
       }, false );
