Cloud.gov onboarding and offboarding instructions

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -122,7 +122,8 @@
             'pages-internal.18f.gov',
             'rpm.newrelic.com',
             'tock.18f.gov',
-            'figma.com'
+            'figma.com',
+            'dashboard.fr.cloud.gov'
           ]
         });
       }, false );
