one.newrelic.com is private

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -120,6 +120,7 @@
             'mail.gsa.gov',
             'meet.gsa.gov',
             'pages-internal.18f.gov',
+            'one.newrelic.com',
             'rpm.newrelic.com',
             'tock.18f.gov',
             'figma.com',
