--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
           </div>
           <div class="grid-col flex-auto">
             This page was last modified on {{ page.last_modified_at | date: '%b %e, %Y' }}
-            <a href="{{ site.github_repo_url }}/edit/master/{{ page.path }}" class="usa-button usa-button--outline">Edit this page</a>
+            <a href="{{ site.github_repo_url }}/edit/main/{{ page.path }}" class="usa-button usa-button--outline">Edit this page</a>
           </div>
         </div>
       </div>
