--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="grid-row grid-gap">
-  <aside class="grid-col-3">
+  <aside class="tablet:grid-col-3">
     <nav>
       {% assign h_max = page.toc_h_max | default: 3 %}
       {% include toc.html
@@ -16,7 +16,7 @@ layout: default
     </nav>
   </aside>
 
-  <div class="grid-col-8">
+  <div class="tablet:grid-col-8">
     <div class="usa-prose" role="main">
       <h1> {{ page.title }} </h1>
       {{ content | markdownify }}
