--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -18,7 +18,12 @@ layout: default
 
   <div class="tablet:grid-col-8">
     <div class="usa-prose" role="main">
-      <h1> {{ page.title }} </h1>
+      <h1>
+        {{ page.title }}
+        {% if page.deprecated %}
+          <small>(Deprecated)</small>
+        {% endif %}
+      </h1>
       {{ content | markdownify }}
     </div>
   </div>
