--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -9,8 +9,10 @@ layout: default
       {% include toc.html
                  html=content
                  sanitize=true
-                 class="inline_toc"
+                 class="inline_toc usa-accordion usa-sidenav"
                  id="my_toc"
+                 item_class="usa-sidenav__item"
+                 submenu_class="usa-sidenav__sublist"
                  h_min=2
                  h_max=h_max %}
     </nav>
