Add site.baseurl for Federalist preview
Co-authored-by: Andrew Duthie <andrew.duthie@gsa.gov>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,7 +84,7 @@
       var sjs = SimpleJekyllSearch({
         searchInput: document.getElementById('search-input'),
         resultsContainer: document.getElementById('search-results'),
-        json: '/search.json',
+        json: '{{ site.baseurl }}/search.json',
         noResultsText: '<li class="no-results">No results were found.</li>'
       });
     </script>
