--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
       {% if page.title %}
         {{ page.title | strip_html }} |
       {% endif %}
-      login.gov handbook
+      Login.gov handbook
     </title>
     <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/assets/css/main.css" />
     <link rel="icon" type="image/x-icon" href="{{site.baseurl}}/favicon.ico" />
