--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
         <div class="usa-navbar">
           <div class="usa-logo" id="basic-logo">
             <a href="/" title="Home" aria-label="Home">
-              <img src="{{site.baseurl}}/assets/img/login-gov-logo.svg" class="usa-logo__img" alt="login.gov" />
+              <img src="{{site.baseurl}}/assets/img/login-gov-logo.svg" class="usa-logo__img" alt="Login.gov" />
               <em class="usa-logo__text">Handbook</em>
             </a>
           </div>
