--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
       {% if page.title %}
         {{ page.title | strip_html }} |
       {% endif %}
-      login.gov handbook
+      Login.gov handbook
     </title>
     <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/assets/css/main.css" />
     <link rel="icon" type="image/x-icon" href="{{site.baseurl}}/favicon.ico" />
@@ -19,7 +19,7 @@
         <div class="usa-navbar">
           <div class="usa-logo" id="basic-logo">
             <a href="/" title="Home" aria-label="Home">
-              <img src="{{site.baseurl}}/assets/img/login-gov-logo.svg" class="usa-logo__img" alt="login.gov" />
+              <img src="{{site.baseurl}}/assets/img/login-gov-logo.svg" class="usa-logo__img" alt="Login.gov" />
               <em class="usa-logo__text">Handbook</em>
             </a>
           </div>
