Add article that renders IDP analytics events from JSON (LG-5590)

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -10,7 +10,7 @@ layout: default
                  html=content
                  sanitize=true
                  class="inline_toc usa-accordion usa-sidenav"
-                 id="my_toc"
+                 id="sidenav"
                  item_class="usa-sidenav__item"
                  submenu_class="usa-sidenav__sublist"
                  h_min=2
