--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,7 +77,10 @@
 
     <script type="text/javascript" src="{{ site.baseurl }}/anchor.min.js"></script>
     <script type="text/javascript">
-      anchors.add('#main-content h2, #main-content h3, #main-content [data-anchor]');
+      function setUpAnchors() {
+        anchors.add('#main-content h2, #main-content h3, #main-content [data-anchor]');
+      }
+      setUpAnchors();
     </script>
     <script type="text/javascript" src="{{ site.baseurl }}/assets/js/simple-jekyll-search.min.js"></script>
     <script type="text/javascript">
