--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,10 +75,6 @@
       </div>
     </footer>
 
-    <script type="text/javascript" src="{{ site.baseurl }}/anchor.min.js"></script>
-    <script type="text/javascript">
-      anchors.add('#main-content h2, #main-content h3, #main-content [data-anchor]');
-    </script>
     <script type="text/javascript" src="{{ site.baseurl }}/assets/js/simple-jekyll-search.min.js"></script>
     <script type="text/javascript">
       var sjs = SimpleJekyllSearch({
@@ -88,46 +84,14 @@
         noResultsText: '<li class="no-results">No results were found.</li>'
       });
     </script>
-    <script type="text/javascript" src="{{ site.baseurl }}/private-eye.js"></script>
-    <script type="text/javascript">
-      document.addEventListener('DOMContentLoaded', function() {
-        PrivateEye({
-          defaultMessage: "This link is private to TTS.",
-          ignoreUrls: [
-            '18f.slack.com',
-            'anywhere.gsa.gov',
-            'bookit.gsa.gov',
-            'calendar.gsa.gov',
-            'cm-jira.usa.gov',
-            'connect.gsa.gov',
-            'docs.google.com',
-            'drive.google.com',
-            'ea.gsa.gov',
-            'email.gsa.gov',
-            'gcims.gsa.gov',
-            'github.com/18f/identity-devops',
-            'github.com/18f/identity-devops-private',
-            'github.com/18f/identity-handbook-private',
-            'github.com/18f/identity-idp-config',
-            'gkey.gsa.gov',
-            'gsa-tts.slack.com',
-            'gsa.my.salesforce.com',
-            'gsaolu.gsa.gov',
-            'hrprod.hr.gsa.gov',
-            'insite.gsa.gov',
-            'login-gov.app.opsgenie.com',
-            'login-handbook.app.cloud.gov',
-            'mail.gsa.gov',
-            'meet.gsa.gov',
-            'pages-internal.18f.gov',
-            'one.newrelic.com',
-            'rpm.newrelic.com',
-            'tock.18f.gov',
-            'figma.com',
-            'dashboard.fr.cloud.gov'
-          ]
-        });
-      }, false );
+    <script type="module">
+      import { loadAnchors } from '{{ "/assets/js/build/anchors.js" | prepend: site.baseurl }}';
+      import { loadPrivateEye } from '{{ "/assets/js/build/private-links.js" | prepend: site.baseurl }}';
+
+      document.addEventListener('DOMContentLoaded', () => {
+        loadAnchors();
+        loadPrivateEye();
+      }, false);
     </script>
   </body>
 </html>
