Combine setup scripts into one file

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,9 +75,11 @@
       </div>
     </footer>
     <script type="module">
-      import { loadAnchors } from '{{ "/assets/build/anchors.js" | prepend: site.baseurl }}';
-      import { loadPrivateEye } from '{{ "/assets/build/private-links.js" | prepend: site.baseurl }}';
-      import { loadSimpleJekyllSearch } from '{{ "/assets/build/search.js" | prepend: site.baseurl }}';
+      import {
+        loadAnchors,
+        loadPrivateEye,
+        loadSimpleJekyllSearch,
+      } from '{{ "/assets/build/setup.js" | prepend: site.baseurl }}';
 
       document.addEventListener('DOMContentLoaded', () => {
         loadAnchors();
