--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,8 +88,8 @@
           searchInput: document.getElementById('search-input'),
           resultsContainer: document.getElementById('search-results'),
           json: '{{ site.baseurl }}/search.json',
-          noResultsText: '<li class="no-results">No results were found.</li>'
-        })
+          noResultsText: '<li class="no-results">No results were found.</li>',
+        });
       }, false);
     </script>
   </body>
