--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <meta name="MobileOptimized" content="320" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body>
+  <body data-base-url="{{ site.baseurl }}">
     <header class="usa-header usa-header--basic" role="banner">
       <div class="usa-nav-container">
         <div class="usa-navbar">
@@ -36,12 +36,7 @@
           <div class="usa-nav__secondary-container">
             <div class="usa-search usa-search--small" role="search">
               <label class="usa-sr-only" for="basic-search-field-small">Search small</label>
-              <input
-                type="text"
-                id="search-input"
-                name="search"
-                placeholder="Search articles..."
-                data-search-json-path="{{ site.baseurl }}/search.json" />
+              <input type="text" id="search-input" name="search" placeholder="Search articles...">
               <ul id="search-results"></ul>
             </div>
           </div>
