Add more types (#235)
* import, add types for SimpleJekyllSearch
  - It sets a global property on window :[
* Add typings for 18f/private-eye
* Add back in noImplicitAny, add types to analytics-events
* Combine setup scripts into one file
* Update setup script to do everything, move search JSON to data attribute
* Put typings in correct spot\
* Remove unused definition
* Add eslint ignore... tsc knows about this, it's probably fine
* Add body data-base-url attr

Co-authored-by: Andrew Duthie <andrew.duthie@gsa.gov>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <meta name="MobileOptimized" content="320" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body>
+  <body data-base-url="{{ site.baseurl }}">
     <header class="usa-header usa-header--basic" role="banner">
       <div class="usa-nav-container">
         <div class="usa-navbar">
@@ -74,23 +74,17 @@
         </div>
       </div>
     </footer>
-
-    <script type="text/javascript" src="{{ site.baseurl }}/assets/js/simple-jekyll-search.min.js"></script>
-    <script type="text/javascript">
-      var sjs = SimpleJekyllSearch({
-        searchInput: document.getElementById('search-input'),
-        resultsContainer: document.getElementById('search-results'),
-        json: '{{ site.baseurl }}/search.json',
-        noResultsText: '<li class="no-results">No results were found.</li>'
-      });
-    </script>
     <script type="module">
-      import { loadAnchors } from '{{ "/assets/build/anchors.js" | prepend: site.baseurl }}';
-      import { loadPrivateEye } from '{{ "/assets/build/private-links.js" | prepend: site.baseurl }}';
+      import {
+        loadAnchors,
+        loadPrivateEye,
+        loadSimpleJekyllSearch,
+      } from '{{ "/assets/build/setup.js" | prepend: site.baseurl }}';
 
       document.addEventListener('DOMContentLoaded', () => {
         loadAnchors();
         loadPrivateEye();
+        loadSimpleJekyllSearch();
       }, false);
     </script>
   </body>
