Style login button as plain text
- Leave logout button as button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
 
           <ul class="usa-nav__secondary-links">
             <li class="usa-nav__secondary-item">
-              <div id="private-login-button-container"></div>
+              <span id="private-login-button-container" class="margin-right-1"></span>
             </li>
           </ul>
 
