Redo team page components
- Leverage useQuery and createPortal

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,8 +51,9 @@
     </header>
     <main class="usa-layout-docs usa-section" id="main-content">
       <div class="grid-container">
-          {{ content }}
-        </div>
+        {{ content }}
+
+        <span data-anchor="extra data anchor to make anchor.js render its stylesheet"></span>
       </div>
     </main>
     <footer class="usa-footer usa-footer--slim" role="contentinfo">
