--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -2,12 +2,27 @@
 layout: default
 ---
 
+{% capture content_markdown %}
+
+{{ page.description }}
+
+{{ content }}
+
+### Articles
+
+{% include articles_category.md category=page %}
+
+{% endcapture %}
+
+{% assign content_html = content_markdown | markdownify %}
+
+
 <div class="grid-row grid-gap">
   <aside class="tablet:grid-col-3">
     <nav id="sidenav-wrapper">
       {% assign h_max = page.toc_h_max | default: 3 %}
       {% include toc.html
-                 html=content
+                 html=content_html
                  sanitize=true
                  class="inline_toc usa-accordion usa-sidenav"
                  id="sidenav"
@@ -21,12 +36,13 @@ layout: default
   <div class="tablet:grid-col-8">
     <div class="usa-prose" role="main">
       <h1>
-        {{ page.title }}
-        {% if page.deprecated %}
-          <small>(Deprecated)</small>
+        {% if page.icon %}
+          {% include uswds-icon.html icon=page.icon %}
         {% endif %}
+        {{ page.title }}
       </h1>
-      {{ content | markdownify }}
+
+      {{ content_html }}
     </div>
   </div>
 </div>
