Add a style for a highlighted target
- Used when linking to a particular anchor in the handbook

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -38,3 +38,15 @@
 .deprecated-link {
   color: gray;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  &:target {
+    background-color: #fcf197; // TODO: use color('warning-light');
+  }
+}
