Auto-convert times to local timezone for deploy schedules (#341)
* use custom elements
* rename to .ts if there is no JSX
* Name elements "Element"
* hardcode "en-US" locale for timezone conversion

Co-authored-by: Andrew Duthie <andrew.duthie@gsa.gov>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,7 +86,8 @@
         loadAnchors,
         loadPrivateEye,
         loadSimpleJekyllSearch,
-        setUpPrivateLogin
+        setUpPrivateLogin,
+        installCustomTimeElements
       } from '{{ "/assets/build/setup.js" | prepend: site.baseurl }}';
 
       document.addEventListener('DOMContentLoaded', () => {
@@ -94,6 +95,7 @@
         loadPrivateEye();
         loadSimpleJekyllSearch();
         setUpPrivateLogin();
+        installCustomTimeElements();
       }, false);
     </script>
   </body>
