Build JavaScript files to site output directory
See https://github.com/18F/identity-site/pull/1011

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,7 +88,7 @@
         loadSimpleJekyllSearch,
         setUpPrivateLogin,
         installCustomTimeElements
-      } from '{{ "/assets/build/setup.js" | prepend: site.baseurl }}';
+      } from '{{ "/assets/js/setup.js" | prepend: site.baseurl }}';
 
       document.addEventListener('DOMContentLoaded', () => {
         loadAnchors();
