Compile Sass with JavaScript package

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
       {% endif %}
       Login.gov handbook
     </title>
+    <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/assets/css/styles.css" />
     <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/assets/css/main.css" />
     <link rel="icon" type="image/x-icon" href="{{site.baseurl}}/favicon.ico" />
     <meta name="HandheldFriendly" content="True" />
