Upgrade Login.gov Design System to v7.0.1

--- a/assets/scss/main.css.scss
+++ b/assets/scss/main.css.scss
@@ -1,5 +1,5 @@
 // Imports
-@import "identity-style-guide/dist/assets/scss/packages/required";
+@use "uswds-core" as *;
 
 // Hello! These styles are specific styles for
 // the Login.gov Handbook. Please refer to design.login.login-gov
