--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,39 +15,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body data-base-url="{{site.baseurl}}">
-    <header class="usa-header usa-header--basic" role="banner">
-      <div class="usa-nav-container">
-        <div class="usa-navbar">
-          <div class="usa-logo" id="basic-logo">
-            <a href="/" title="Home" aria-label="Home">
-              <img src="{{site.baseurl}}/assets/img/login-gov-logo.svg" class="usa-logo__img" alt="Login.gov" />
-              <em class="usa-logo__text">Handbook</em>
-            </a>
-          </div>
-          <!--
-            <button class="usa-menu-btn">Menu</button>
-          -->
+    <header class="usa-header usa-header--extended">
+      <div class="usa-navbar">
+        <div class="usa-logo">
+          <a href="/" title="Home" aria-label="Home">
+            <img src="{{ site.baseurl }}/assets/img/login-gov-logo.svg" class="usa-logo__img" alt="Login.gov" />
+            <em class="usa-logo__text">Handbook</em>
+          </a>
         </div>
-        <nav role="navigation" class="usa-nav">
-          <button class="usa-nav__close"><img src="/assets/img/close.svg" alt="Close"></button>
-          <ul class="usa-nav__primary usa-accordion">
-            <!-- TODO: nav elements -->
-          </ul>
-
-          <ul class="usa-nav__secondary-links">
-            <li class="usa-nav__secondary-item">
-              <span id="private-login-button-container" class="margin-right-1"></span>
-            </li>
-          </ul>
-
-          <div class="usa-nav__secondary-container">
-            <div class="usa-search usa-search--small" role="search">
-              <label class="usa-sr-only" for="basic-search-field-small">Search small</label>
-              <input type="text" id="search-input" name="search" placeholder="Search articles...">
-              <ul id="search-results"></ul>
-            </div>
+        <div class="grid-container tablet:margin-0 tablet:padding-0">
+          <div class="flex-row flex-align-center grid-row grid-gap-1">
+            <ul class="usa-nav__secondary-links grid-col grid-col-auto margin-0">
+              <li class="usa-nav__secondary-item" id="private-login-button-container"></li>
+            </ul>
+            <form class="usa-search usa-search--small grid-col grid-col-fill" role="search">
+              <label class="usa-sr-only" for="search-input">Search articles</label>
+              <input class="usa-input width-auto" type="search" id="search-input" placeholder="Search articles...">
+              <button class="usa-button" type="submit">
+                <span class="usa-search__submit-text">Search</span>
+              </button>
+              <ul id="search-results" tabindex="-1"></ul>
+            </form>
           </div>
-        </nav>
+        </div>
       </div>
     </header>
     <main class="usa-layout-docs usa-section" id="main-content">
