Upgrade Login.gov Design System to v7.0.1 (#426)
* Upgrade Login.gov Design System to v7.0.1

* Restructure header as extended

* Update LGDS to 7.0.1 stable

* Remove temporary patch

--- a/assets/scss/main.css.scss
+++ b/assets/scss/main.css.scss
@@ -1,11 +1,11 @@
 // Imports
-@import "identity-style-guide/dist/assets/scss/packages/required";
+@use "uswds-core" as *;
 
-// Hello! These styles are specific styles for
-// the Login.gov Handbook. Please refer to design.login.login-gov
-// for the broader design system to follow. kthxbai.
+.usa-header--extended .usa-navbar {
+  // The header has a default overflow which prevents search results from showing outside.
+  overflow: visible;
+}
 
-// Search
 #search-results {
   background-color: #ebf3fa;
   position: absolute;
