Update Login.gov Design System to 9.0

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,10 +50,10 @@
     <footer class="usa-footer usa-footer--slim" role="contentinfo">
       <div class="grid-container usa-footer__return-to-top">
         <div class="grid-row flex-align-center">
-          <div class="grid-col flex-1">
+          <div class="grid-col grid-col-auto">
             <a href="#">Return to top</a>
           </div>
-          <div class="grid-col flex-auto">
+          <div class="grid-col grid-col-fill text-right">
             This page was last modified on {{ page.last_modified_at | date: '%b %e, %Y' }}
             <a href="{{ site.github_repo_url }}/edit/main/{{ page.path }}" class="usa-button usa-button--outline">Edit this page</a>
           </div>
