--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -20,6 +20,16 @@ layout: default
 
   <div class="tablet:grid-col-8">
     <div class="usa-prose" role="main">
+      {% if page.category %}
+        {% assign home_url = "/" | prepend: site.baseurl %}
+        {% assign category_url = page.category | slugify | prepend: "/categories/" | prepend: site.baseurl | append: ".html" %}
+        {% component breadcrumb %}
+          {% component breadcrumb_item href=home_url %}Home{% endcomponent %}
+          {% component breadcrumb_item href=category_url %}{{ page.category }}{% endcomponent %}
+          {% component breadcrumb_item href=page.url current %}{{ page.title }}{% endcomponent %}
+        {% endcomponent %}
+      {% endif %}
+
       <h1>
         {{ page.title }}
         {% if page.deprecated %}
