--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     <header class="usa-header usa-header--extended">
       <div class="usa-navbar">
         <div class="usa-logo">
-          <a href="/" title="Home" aria-label="Home">
+          <a href="{{ site.baseurl }}/" title="Home" aria-label="Home">
             <img src="{{ site.baseurl }}/assets/img/login-gov-logo.svg" class="usa-logo__img" alt="Login.gov" />
             <em class="usa-logo__text">Handbook</em>
           </a>
