--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
       {% endif %}
       Login.gov handbook
     </title>
+    <link rel="stylesheet" href="{{ site.baseurl }}/pagefind/pagefind-ui.css">
     <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/assets/css/styles.css" />
     <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/assets/css/main.css" />
     <link rel="icon" type="image/x-icon" href="{{site.baseurl}}/favicon.ico" />
@@ -14,7 +15,7 @@
     <meta name="MobileOptimized" content="320" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body data-base-url="{{site.baseurl}}">
+  <body {% unless page.exclude_from_index %}data-pagefind-body{% endunless %}>
     <header class="usa-header usa-header--extended">
       <div class="usa-navbar">
         <div class="usa-logo">
@@ -23,17 +24,8 @@
             <em class="usa-logo__text">Handbook</em>
           </a>
         </div>
-        <div class="grid-container tablet:margin-0 tablet:padding-0">
-          <div class="flex-row flex-align-center grid-row grid-gap-1">
-            <form class="usa-search usa-search--small grid-col grid-col-fill" role="search">
-              <label class="usa-sr-only" for="search-input">Search articles</label>
-              <input class="usa-input width-auto" type="search" id="search-input" placeholder="Search articles...">
-              <button class="usa-button" type="submit">
-                <span class="usa-search__submit-text">Search</span>
-              </button>
-              <ul id="search-results" tabindex="-1"></ul>
-            </form>
-          </div>
+        <div class="flex-fill display-flex flex-justify-end flex-align-center padding-left-4 padding-y-2">
+          <div id="search"></div>
         </div>
       </div>
     </header>
@@ -69,18 +61,18 @@
         </div>
       </div>
     </footer>
+    <script src="{{ site.baseurl }}/pagefind/pagefind-ui.js"></script>
     <script type="module">
       import {
         loadAnchors,
         loadPrivateEye,
-        loadSimpleJekyllSearch,
         installCustomTimeElements
       } from '{{ "/assets/js/setup.js" | prepend: site.baseurl }}';
 
+      new PagefindUI({ element: '#search', showImages: false });
       document.addEventListener('DOMContentLoaded', () => {
         loadAnchors();
         loadPrivateEye();
-        loadSimpleJekyllSearch();
         installCustomTimeElements();
       }, false);
     </script>
