Remove inherent padding from breadcrumb

--- a/_components/breadcrumb_component.html.erb
+++ b/_components/breadcrumb_component.html.erb
@@ -1,4 +1,4 @@
-<nav class="usa-breadcrumb" aria-label="Breadcrumbs,,">
+<nav class="<%= css_class %>" aria-label="Breadcrumbs,,">
   <ol class="usa-breadcrumb__list">
     <%= content %>
   </ol>
