Remove inherent padding from breadcrumb (2)
See: 4412efa

Apply for categories template

--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -36,7 +36,7 @@ layout: default
   <div class="tablet:grid-col-8">
     <div class="usa-prose" role="main">
       {% assign home_url = "/" | prepend: site.baseurl %}
-      {% component breadcrumb %}
+      {% component breadcrumb class="padding-y-0" %}
         {% component breadcrumb_item href=home_url %}Home{% endcomponent %}
         {% component breadcrumb_item href=page.url current %}{{ page.title }}{% endcomponent %}
       {% endcomponent %}
