--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -30,12 +30,8 @@ layout: default
         {% endcomponent %}
       {% endif %}
 
-      <h1>
-        {{ page.title }}
-        {% if page.deprecated %}
-          <small>(Deprecated)</small>
-        {% endif %}
-      </h1>
+      <h1>{{ page.title }}</h1>
+
       {{ content | markdownify }}
     </div>
   </div>
