Add comment explaining jekyll-redirect-from override
Co-authored-by: Zach Margolis <zachmargolis@users.noreply.github.com>

--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -1,5 +1,11 @@
 ---
 ---
+{% comment %}
+This overrides the base template of jekyll-redirect-from so that we can make titles and descriptions
+searchable in the site index.
+
+See: https://github.com/jekyll/jekyll-redirect-from/blob/master/lib/jekyll-redirect-from/redirect.html
+{% endcomment %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
